Create device logic
Ported device logic from previous implementations of both c++ and c# code.

Took advantage of existing APIs in the Iot library for the ADC, RTC and system CPU temperature.

--- a/BlazorWebSpaceTool/GrpcSpaceServer/GrpcSpaceServer.csproj
+++ b/BlazorWebSpaceTool/GrpcSpaceServer/GrpcSpaceServer.csproj
@@ -10,6 +10,8 @@
 
   <ItemGroup>
     <PackageReference Include="Grpc.AspNetCore" Version="2.26.0" />
+    <PackageReference Include="Iot.Device.Bindings" Version="1.0.0" />
+    <PackageReference Include="System.Device.Gpio" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup>
