--- a/BlazorWebSpaceTool/GrpcSpaceServer/GrpcSpaceServer.csproj
+++ b/BlazorWebSpaceTool/GrpcSpaceServer/GrpcSpaceServer.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Grpc.AspNetCore" Version="2.26.0" />
     <PackageReference Include="Iot.Device.Bindings" Version="1.0.0" />
     <PackageReference Include="System.Device.Gpio" Version="1.0.0" />
+    <PackageReference Include="System.IO.Ports" Version="4.7.0" />
   </ItemGroup>
 
   <ItemGroup>
