Connect client web app to server
Created some UI components to hold data.

Added client certificate requirement for web client.

Fixed some general logic on the server.

--- a/BlazorWebSpaceTool/BlazorWebSpaceTool/BlazorWebSpaceTool.csproj
+++ b/BlazorWebSpaceTool/BlazorWebSpaceTool/BlazorWebSpaceTool.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+
   <ItemGroup>
     <PackageReference Include="Google.Protobuf" Version="3.11.2" />
     <PackageReference Include="Grpc.AspNetCore" Version="2.26.0" />
@@ -26,6 +27,12 @@
   <ItemGroup>
     <Folder Include="Data\" />
     <Folder Include="Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="..\Certs\client.pfx" Link="client.pfx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
 
 </Project>
