--- a/BlazorWebSpaceTool/BlazorWebSpaceTool/appsettings.json
+++ b/BlazorWebSpaceTool/BlazorWebSpaceTool/appsettings.json
@@ -6,5 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Experiment2020ServerAddress": "https://localhost:5001",
+  "ClientCert": "..\\Certs\\client.pfx"
 }
