--- a/BlazorWebSpaceTool/GrpcSpaceServer/Properties/launchSettings.json
+++ b/BlazorWebSpaceTool/GrpcSpaceServer/Properties/launchSettings.json
@@ -7,6 +7,12 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    },
+    "KestrelHosted": {
+      "commandName": "Project",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Production"
+      }
     }
   }
 }
