--- a/BlazorWebSpaceTool/BlazorWebSpaceTool/appsettings.json
+++ b/BlazorWebSpaceTool/BlazorWebSpaceTool/appsettings.json
@@ -7,6 +7,9 @@
     }
   },
   "AllowedHosts": "*",
-  "Experiment2020ServerAddress": "https://localhost:5001",
-  "ClientCert": "..\\Certs\\client.pfx"
+  "Experiment2020ServerAddress": "https://localhost:5443",
+  "ClientCert": "..\\Certs\\client.pfx",
+  "ClientCertPass": "1234",
+  "ServerCert": "..\\Certs\\server.pfx",
+  "ServerCertPass": "1234"
 }
