First test with experiment
Finally got my hands on the experiment to test the code. As I expected, there were things I did not understand with how the API works vs previous APIs I have used. There were also other issues.

Issue 1: The CS pins of the ADC and Gyroscope were opposite what I expected. Took a good hour to figure that out as I assumed I had created some major code flaw.

Issue 2: The SPI API does not lock the pins down from multiple threads. Not sure why I expected this anyway. I had to disable the background service on the server so nothing would call an SPI device at the same time. The result of this would be the returned value of Product ID from the Gyroscope, which should always be 16460, showing up as a random value. All values for every register would be random from then on.

Issue 3: With actual data there were some data massaging errors that I made. I expected this and the fix was simple.

The changes in this commit represent a successful working state. From here, a small redesign is necessary. The background service in the GrpcServer will be the only way to communicate with each device. This means I can remove the constant Device instantiation as well and improve performance. A good goal is 2000 SPS. However, I will make the bulk data gathering occur on a trigger rather than having it constantly running. This way I can support single data calls and alow for time-specific data gathering.

--- a/BlazorWebSpaceTool/BlazorWebSpaceTool/appsettings.json
+++ b/BlazorWebSpaceTool/BlazorWebSpaceTool/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "AllowedHosts": "*",
-  "Experiment2020ServerAddress": "https://localhost:5443",
+  "Experiment2020ServerAddress": "https://rpi:5443",
   "ClientCert": "..\\Certs\\client.pfx",
   "ClientCertPass": "1234",
   "ServerCert": "..\\Certs\\server.pfx",
