--- a/BlazorWebSpaceTool/BrctcSpaceLibrary/BrctcSpaceLibrary.csproj
+++ b/BlazorWebSpaceTool/BrctcSpaceLibrary/BrctcSpaceLibrary.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Iot.Device.Bindings" Version="1.0.0" />
+    <PackageReference Include="System.Device.Gpio" Version="1.0.0" />
+    <PackageReference Include="System.IO.Ports" Version="4.7.0" />
+  </ItemGroup>
+
 </Project>
