--- a/BlazorWebSpaceTool/Vibe2020DataAcquisition/Vibe2020Tests.csproj
+++ b/BlazorWebSpaceTool/Vibe2020DataAcquisition/Vibe2020Tests.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BlazorWebSpaceTool\BrctcSpaceLibrary\BrctcSpaceLibrary.csproj" />
+    <ProjectReference Include="..\BrctcSpaceLibrary\BrctcSpaceLibrary.csproj" />
   </ItemGroup>
 
 </Project>
