--- a/BlazorWebSpaceTool/BlazorWebSpaceTool/BlazorWebSpaceTool.csproj
+++ b/BlazorWebSpaceTool/BlazorWebSpaceTool/BlazorWebSpaceTool.csproj
@@ -32,9 +32,11 @@
   <ItemGroup>
     <Content Include="..\Certs\client.pfx" Link="client.pfx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
     </Content>
     <Content Include="..\Certs\server.pfx" Link="server.pfx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
     </Content>
   </ItemGroup>
 
