--- a/BlazorWebSpaceTool/GrpcSpaceServer/GrpcSpaceServer.csproj
+++ b/BlazorWebSpaceTool/GrpcSpaceServer/GrpcSpaceServer.csproj
@@ -20,6 +20,14 @@
   <ItemGroup>
     <Content Include="..\Certs\server.pfx" Link="server.pfx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="..\Certs\client.pfx" Link="client.pfx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
     </Content>
   </ItemGroup>
 
