Modified SPI settings for both devices, begun full system design
Our new design includes the second SPI bus where the ADC is now placed. All settings have been changed to reflect this.

The save file logic on the web client will not download to the browser anymore. Simply downloading to the temp directory is enough since I run it from the same computer anyway.

I have begun creation of an abstracted version of our experiment. The current version is incomplete and will undergo redesign after some thought and some tests.

The better design would be to keep both SPI devices seperate and simply make communication with the RTC thread-safe. Both SPI devices would write to their own seperate files. A third thread for UART would then keep track of new files created from the ADC thread and send them through telemetry. This would allow for the SPI devices to read as fast as they require without waiting on each other. This would also allow for the slow process of UART communication to occur without halting either device. However, without testing it is difficult to say how slow the RTC thread-safe solution will be, or how it will be done. Ideas to come.

--- a/BlazorWebSpaceTool/BlazorWebSpaceTool/BlazorWebSpaceTool.csproj
+++ b/BlazorWebSpaceTool/BlazorWebSpaceTool/BlazorWebSpaceTool.csproj
@@ -26,6 +26,7 @@
 
   <ItemGroup>
     <Folder Include="Data\" />
+    <Folder Include="Temp\" />
     <Folder Include="Services\" />
   </ItemGroup>
 
