Post-testing program updates
Fixed a few boolean issues, some UI mistakes and added a proper loop to the main thread of the full system program that kills the logic after a timeout.

--- a/BlazorWebSpaceTool/Vibe2020Client/appsettings.json
+++ b/BlazorWebSpaceTool/Vibe2020Client/appsettings.json
@@ -6,7 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "TargetURL": "https://192.168.1.103:5443",
+  "TargetURL": "https://rpi:5443",
   "ClientCert": "client.pfx",
   "ClientCertPass": "1234",
   "ServerCert": "server.pfx",
