--- a/BlazorWebSpaceTool/GrpcSpaceServer/GrpcSpaceServer.csproj
+++ b/BlazorWebSpaceTool/GrpcSpaceServer/GrpcSpaceServer.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>e3471e88-e0e5-4f13-9b9d-0cc8584bb89f</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -9,8 +10,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Grpc.AspNetCore" Version="2.26.0" />
-    <PackageReference Include="System.Device.Gpio" Version="1.0.0" />
+    <PackageReference Include="Grpc.AspNetCore" Version="2.33.1" />
+    <PackageReference Include="System.Device.Gpio" Version="1.1.0" />
   </ItemGroup>
 
   <ItemGroup>
