--- a/DataAnalyzer/DataAnalyzer.csproj
+++ b/DataAnalyzer/DataAnalyzer.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FFTW.NET" Version="1.0.1" />
+  </ItemGroup>
+
 </Project>
