--- a/BlazorWebSpaceTool/BrctcCalculations/BrctcCalculations.csproj
+++ b/BlazorWebSpaceTool/BrctcCalculations/BrctcCalculations.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FFTW.NET" Version="1.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.1.2" />
     <PackageReference Include="MSTest.TestFramework" Version="2.1.2" />
@@ -14,12 +15,6 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="FFTW.NET">
-      <HintPath>..\..\Manual Dependency\FFTW.NET.dll</HintPath>
-    </Reference>
   </ItemGroup>
 
   <ItemGroup>
